--- a/src/locales/nl/translation.json
+++ b/src/locales/nl/translation.json
@@ -8,7 +8,8 @@
   },
   "seo": {
     "title": "CRstudio - De Ultieme Tool voor Catalogue Raisonnés",
-    "description": "Hét platform voor het creëren, beheren en publiceren van professionele Catalogue Raisonnés. Ontworpen voor kunstenaars, erfgenamen, galeries en musea. CRstudio combineert eenvoud met technische kracht, zonder afbreuk te doen aan professionaliteit en kwaliteit."
+    "description": "Hét platform voor het creëren, beheren en publiceren van professionele Catalogue Raisonnés. Ontworpen voor kunstenaars, erfgenamen, galeries en musea. CRstudio combineert eenvoud met technische kracht, zonder afbreuk te doen aan professionaliteit en kwaliteit.",
+    "ogimagealt": "Creëer en beheer uw catalogue raisonné professioneel met CRstudio"
   },
   "welcome_message": "Welkom bij CRStudio",
   "description": "Maak en beheer catalogues raisonnés met gemak."
