End of day commit

--- a/src/locales/nl/translation.json
+++ b/src/locales/nl/translation.json
@@ -162,7 +162,7 @@
     "page_description": "xxxxxxxxx",
     "logo_alt": "CRstudio Logo",
     "heading": "Welkom bij CRstudio",
-    "subheading": "Welkom bij CRstudio",
+    "intro_text": "Start nu gratis. Geen creditcard nodig. Je kunt later altijd upgraden naar een betaald abonnement.",
     "google_placeholder": "Doorgaan met Google",
     "or": "OF",
     "email_placeholder": "E-mailadres",
