End of day commit

--- a/src/locales/nl/translation.json
+++ b/src/locales/nl/translation.json
@@ -170,7 +170,7 @@
     "button_register": "Registreren",
     "invalid_mail": "Ongeldig e-mailformaat",
     "check": "Gelieve de beveiligingscontrole te voltooien",
-    "succes": "Succes! Controleer uw e-mail voor de verificatielink! (via register)"
+    "succes": "Succes! Controleer uw e-mail voor de verificatielink!"
   },
 
   "try": {
