End of day commit

--- a/src/locales/nl/translation.json
+++ b/src/locales/nl/translation.json
@@ -281,7 +281,7 @@
       "cta": "Verzend verificatie-e-mail opnieuw",
       "failed": "Het verzenden is mislukt. Probeer later opnieuw.",
       "loading": "Verzenden...",
-      "success": "Een nieuwe verificatielink is verzonden naar je e-mail!",
+      "success": "Een nieuwe verificatie-e-mail is verzonden!",
       "no_email": "E-mailadres onbekend. Registreer opnieuw."
     },
     "subdomain_validation": {
@@ -311,7 +311,7 @@
       "SERVER_ERROR": "Er ging iets mis. Probeer het later opnieuw.",
       "SUBDOMAIN_CHECK_FAILED": "Fout bij het controleren van het subdomein.",
       "SUBDOMAIN_TAKEN": "Dit subdomein is al in gebruik.",
-      "TOKEN_EXPIRED": "Deze link is verlopen. Vraag een nieuwe verificatie aan.",
+      "TOKEN_EXPIRED": "Deze link is verlopen. Vraag een nieuwe verificatie-e-mail aan.",
       "TOKEN_INVALID": "Deze verificatielink is ongeldig.",
       "TOKEN_MISSING": "Authenticatie token ontbreekt.",
       "TOKEN_NOT_FOUND": "Geen token of sessie gevonden.",
@@ -333,7 +333,7 @@
     "button_register": "Registreren",
     "check": "Gelieve de beveiligingscontrole te voltooien",
     "complete_profile": "Vervolledig je profiel",
-    "duplicate_needs_verification": "Je hebt al een account. Klik op de link in je e-mail om verder te gaan.",
+    "duplicate_needs_verification": "Je hebt al een account. (Klik op de link in je e-mail om verder te gaan.)",
     "email_invalid": "Ongeldig e-mailformaat",
     "email_placeholder": "E-mailadres",
     "go_to_site": "Ga naar je site",
@@ -343,7 +343,7 @@
     "logo_alt": "CRstudio Logo",
     "or": "OF",
     "profile_check_failed": "Er is iets misgegaan bij het controleren van je profiel. Probeer het later opnieuw of contacteer ons supportteam.",
-    "resend_verification": "Verzend opnieuw verificatiemail",
+    "resend_verification": "Verzend opnieuw verificatie-e-mail",
     "social_login_failed": "Er is iets misgegaan tijdens het aanmelden met Google. Probeer opnieuw of gebruik e-mailregistratie.",
     "succes": "Succes! Controleer uw e-mail voor de verificatielink!",
     "verify_error": {
@@ -352,8 +352,9 @@
       "EMAIL_DUPLICATE": "Dit e-mailadres bestaat al (in Supabase Auth). Je bent al geregistreerd.",
       "EMAIL_INVALID": "Dit e-mailadres is ongeldig of niet leverbaar.",
       "EMAIL_SEND": "De verificatie-e-mail is succesvol verzonden. Controleer je inbox.",
-      "EMAIL_SEND_FAILED": "De verificatiemail kon niet verzonden worden. Probeer opnieuw.",
+      "EMAIL_SEND_FAILED": "De verificatie-e-mail kon niet verzonden worden. Probeer opnieuw.",
       "INSERT_FAILED": "Fout bij opslaan van je registratie. Probeer opnieuw.",
+      "INVALID_USER_RECORD": "Er is een probleem met je registratie. Gelieve opnieuw te registreren.",
       "KICKBOX_FAILED": "Fout bij het controleren van je e-mailadres. Probeer later opnieuw.",
       "METHOD_NOT_ALLOWED": "Deze actie is niet toegestaan.",
       "MISSING_FIELDS": "E-mailadres of beveiligingscontrole ontbreekt.",
