--- a/src/locales/nl/translation.json
+++ b/src/locales/nl/translation.json
@@ -327,32 +327,32 @@
     "seo_title": "Gratis proberen bij CRstudio",
     "seo_description": "Gratis CRstudio proberen voor een maand.",
     "page_description": "Pagina om je gratis te registreren bij CRstudio",
-    "account_exists_subdomain": "Je hebt al een subdomein-site.",
-    "account_exists_no_subdomain": "Je hebt al een account, maar moet je profiel nog vervolledigen.",
+    "account_exists_subdomain": "Je hebt al een kunstenaarssite.",
+    "account_exists_no_subdomain": "Je hebt al een account, maar moet je profiel nog afronden.",
     "button_busy": "Registeren ...",
     "button_register": "Registreren",
     "check": "Gelieve de beveiligingscontrole te voltooien",
     "complete_profile": "Vervolledig je profiel",
-    "duplicate_needs_verification": "Je hebt al een account. (Klik op de link in je e-mail om verder te gaan.)",
+    "duplicate_needs_verification": "Je hebt al een account. Klik op de link in je e-mail om verder te gaan.",
     "email_invalid": "Ongeldig e-mailformaat",
     "email_placeholder": "E-mailadres",
     "go_to_site": "Ga naar je site",
     "google_placeholder": "Doorgaan met Google",
     "heading": "Welkom bij CRstudio",
-    "intro_text": "Maak gratis jouw site. Geen creditcard nodig. Je kunt later altijd upgraden naar een betaald abonnement.",
+    "intro_text": "Bouw gratis je eigen site. Geen creditcard nodig. Later eenvoudig upgraden.",
     "logo_alt": "CRstudio Logo",
     "or": "OF",
-    "profile_check_failed": "Er is iets misgegaan bij het controleren van je profiel. Probeer het later opnieuw of contacteer ons supportteam.",
-    "resend_verification": "Verzend opnieuw verificatie-e-mail",
-    "social_login_failed": "Er is iets misgegaan tijdens het aanmelden met Google. Probeer opnieuw of gebruik e-mailregistratie.",
+    "profile_check_failed": "Er ging iets mis bij het controleren van je profiel. Probeer het later opnieuw of neem gerust contact op met ons supportteam.",
+    "resend_verification": "Verificatie-e-mail opnieuw verzenden",
+    "social_login_failed": "Er is iets misgegaan bij het aanmelden met Google. Probeer het opnieuw of registreer via e-mail.",
     "succes": "Succes! Controleer uw e-mail voor de verificatielink!",
     "verify_error": {
       "ALREADY_REGISTERED": "Je bent al geregistreerd, maar nog niet geverifieerd. Controleer je e-mail.",
       "AUTH_CHECK_FAILED": "Er ging iets mis bij het controleren van je account.",
       "EMAIL_DUPLICATE": "Dit e-mailadres bestaat al (in Supabase Auth). Je bent al geregistreerd.",
       "EMAIL_INVALID": "Dit e-mailadres is ongeldig of niet leverbaar.",
-      "EMAIL_SEND": "De verificatie-e-mail is succesvol verzonden. Controleer je inbox.",
-      "EMAIL_SEND_FAILED": "De verificatie-e-mail kon niet verzonden worden. Probeer opnieuw.",
+      "EMAIL_SEND": "We hebben je een e-mail gestuurd! Controleer je inbox om verder te gaan.",
+      "EMAIL_SEND_FAILED": "Er ging iets mis bij het verzenden van de verificatie-e-mail. Probeer het later nog eens.",
       "INSERT_FAILED": "Fout bij opslaan van je registratie. Probeer opnieuw.",
       "INVALID_USER_RECORD": "Er is een probleem met je registratie. Gelieve opnieuw te registreren.",
       "KICKBOX_FAILED": "Fout bij het controleren van je e-mailadres. Probeer later opnieuw.",
