End of day commit

--- a/src/locales/nl/translation.json
+++ b/src/locales/nl/translation.json
@@ -157,8 +157,8 @@
   },
   
   "overview": {
-    "title": "Bewaar jouw volledig oeuvre\n voor iedereen en altijd online",
-    "description": "Spotgemakkelijk en spotgoedkoop\nZonder technische kennis\nContinu aan te vullen\nIn 3 talen uit 30 beschikbare talen\nIn een gepersonaliseerde layout"
+    "title": "Jouw catalogue raisonné.\nAltijd online. Voor iedereen.",
+    "description": "Publiceer eenvoudig en betaalbaar\nZonder zorgen over techniek\nVul aan à volonté\nIn 3 talen, gekozen uit 30 talen\nIn jouw layout, jouw stijl"
   },
 
   "pricing": {
